syntax = "proto3";
option go_package = "api/pb";

import "google/protobuf/timestamp.proto";


message Chat {
    int64 chat_id = 1;
    string title = 2;
    int32 number_members = 3;
    google.protobuf.Timestamp created_at = 4; 
}


message Message {
    int64 message_id = 1;
    int64 chat_id = 2;
    int64 sender_id = 3;
    string username = 4;
    string body = 5;
    bool is_deleted = 6;
    google.protobuf.Timestamp sent_at = 7;    
}


message Member {
    int64 member_id = 1;
    string username = 2;
    int64 chat_id = 3;
    string role = 4;
}



