syntax = "proto3";
option go_package = "api/pb";

import "message.proto";


message CreateChatResponse {
    Chat chat = 1;
}


message GetChatResponse {
    Chat chat = 1;
}


message AddMemberResponse {
    Member member = 1;
}


message SendMessageResponse {
    Message message = 1;
}


message GetMembersResponse {
    uint64 chat_id = 1;
    repeated Member members = 2;
}


message GetMessagesResponse {
    uint64 chat_id = 1;
    repeated Message messages = 2;
}